# serializer version: 1
# name: test_cover_device[mock_hub_configuration_prod_awning_dimmer-mock_hub_status_prod_awning]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': 'terrasse',
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': 'http://webcontrol/control',
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'wmspro',
          '58717',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'WAREMA Renkhoff SE',
      'model': 'Awning',
      'model_id': None,
      'name': 'Markise',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': '58717',
      'suggested_area': 'Terrasse',
      'sw_version': None,
      'via_device_id': <ANY>,
    }),
    DeviceRegistryEntrySnapshot({
      'area_id': 'terrasse',
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': 'http://webcontrol/control',
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'wmspro',
          '97358',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'WAREMA Renkhoff SE',
      'model': 'Dimmer',
      'model_id': None,
      'name': 'Licht',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': '97358',
      'suggested_area': 'Terrasse',
      'sw_version': None,
      'via_device_id': <ANY>,
    }),
    DeviceRegistryEntrySnapshot({
      'area_id': 'terrasse',
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': 'http://webcontrol/control',
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'wmspro',
          '19239',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'WAREMA Renkhoff SE',
      'model': 'Room',
      'model_id': None,
      'name': 'Terrasse',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': '19239',
      'suggested_area': 'Terrasse',
      'sw_version': None,
      'via_device_id': <ANY>,
    }),
  ])
# ---
# name: test_cover_device[mock_hub_configuration_prod_awning_dimmer-mock_hub_status_prod_dimmer]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': 'terrasse',
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': 'http://webcontrol/control',
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'wmspro',
          '58717',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'WAREMA Renkhoff SE',
      'model': 'Awning',
      'model_id': None,
      'name': 'Markise',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': '58717',
      'suggested_area': 'Terrasse',
      'sw_version': None,
      'via_device_id': <ANY>,
    }),
    DeviceRegistryEntrySnapshot({
      'area_id': 'terrasse',
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': 'http://webcontrol/control',
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'wmspro',
          '97358',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'WAREMA Renkhoff SE',
      'model': 'Dimmer',
      'model_id': None,
      'name': 'Licht',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': '97358',
      'suggested_area': 'Terrasse',
      'sw_version': None,
      'via_device_id': <ANY>,
    }),
    DeviceRegistryEntrySnapshot({
      'area_id': 'terrasse',
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': 'http://webcontrol/control',
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'wmspro',
          '19239',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'WAREMA Renkhoff SE',
      'model': 'Room',
      'model_id': None,
      'name': 'Terrasse',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': '19239',
      'suggested_area': 'Terrasse',
      'sw_version': None,
      'via_device_id': <ANY>,
    }),
  ])
# ---
# name: test_cover_device[mock_hub_configuration_prod_roller_shutter-mock_hub_status_prod_roller_shutter]
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': 'wohnbereich',
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': 'http://webcontrol/control',
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'wmspro',
          '18894',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'WAREMA Renkhoff SE',
      'model': 'RollerShutterBlind',
      'model_id': None,
      'name': 'Wohnebene alle',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': '18894',
      'suggested_area': 'Wohnbereich',
      'sw_version': None,
      'via_device_id': <ANY>,
    }),
    DeviceRegistryEntrySnapshot({
      'area_id': 'wohnbereich',
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': 'http://webcontrol/control',
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'wmspro',
          '116682',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'WAREMA Renkhoff SE',
      'model': 'RollerShutterBlind',
      'model_id': None,
      'name': 'Wohnzimmer',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': '116682',
      'suggested_area': 'Wohnbereich',
      'sw_version': None,
      'via_device_id': <ANY>,
    }),
    DeviceRegistryEntrySnapshot({
      'area_id': 'wohnbereich',
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': 'http://webcontrol/control',
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'wmspro',
          '172555',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'WAREMA Renkhoff SE',
      'model': 'RollerShutterBlind',
      'model_id': None,
      'name': 'Badezimmer',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': '172555',
      'suggested_area': 'Wohnbereich',
      'sw_version': None,
      'via_device_id': <ANY>,
    }),
    DeviceRegistryEntrySnapshot({
      'area_id': 'wohnbereich',
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': 'http://webcontrol/control',
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'wmspro',
          '230952',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'WAREMA Renkhoff SE',
      'model': 'RollerShutterBlind',
      'model_id': None,
      'name': 'Sportzimmer',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': '230952',
      'suggested_area': 'Wohnbereich',
      'sw_version': None,
      'via_device_id': <ANY>,
    }),
    DeviceRegistryEntrySnapshot({
      'area_id': 'terrasse',
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': 'http://webcontrol/control',
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'wmspro',
          '284942',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'WAREMA Renkhoff SE',
      'model': 'RollerShutterBlind',
      'model_id': None,
      'name': 'Terrasse',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': '284942',
      'suggested_area': 'Terrasse',
      'sw_version': None,
      'via_device_id': <ANY>,
    }),
    DeviceRegistryEntrySnapshot({
      'area_id': 'alle',
      'config_entries': <ANY>,
      'config_entries_subentries': <ANY>,
      'configuration_url': 'http://webcontrol/control',
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'wmspro',
          '328518',
        ),
      }),
      'is_new': False,
      'labels': set({
      }),
      'manufacturer': 'WAREMA Renkhoff SE',
      'model': 'RollerShutterBlind',
      'model_id': None,
      'name': 'alle Rollläden',
      'name_by_user': None,
      'primary_config_entry': <ANY>,
      'serial_number': '328518',
      'suggested_area': 'Alle',
      'sw_version': None,
      'via_device_id': <ANY>,
    }),
  ])
# ---
